[gd_scene load_steps=9 format=3 uid="uid://dwwpbyho4tqlq"]

[ext_resource type="Script" path="res://ship/ship.gd" id="1_i3f1w"]
[ext_resource type="Script" path="res://ship/radar.gd" id="2_lr2vt"]
[ext_resource type="Texture2D" uid="uid://b7yjp8jelnsm7" path="res://assets/Fighter/Idle.png" id="3_1s5vt"]
[ext_resource type="Texture2D" uid="uid://dmb08d2q1wgfb" path="res://assets/radarTeste.png" id="5_irpux"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_itcvl"]
bounce = 1.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_flok3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tndx8"]
radius = 8.0
height = 26.0

[sub_resource type="SpriteFrames" id="SpriteFrames_jklch"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_1s5vt")
}],
"loop": true,
"name": &"iddle",
"speed": 5.0
}]

[node name="Ship" type="RigidBody2D"]
collision_layer = 5
collision_mask = 5
physics_material_override = SubResource("PhysicsMaterial_itcvl")
center_of_mass_mode = 1
contact_monitor = true
max_contacts_reported = 2
linear_damp = 4.0
angular_damp = 2.0
script = ExtResource("1_i3f1w")
metadata/_edit_group_ = true

[node name="Radar" type="Area2D" parent="."]
modulate = Color(0.87946, 0.119981, 0, 1)
material = SubResource("CanvasItemMaterial_flok3")
rotation = -1.5708
collision_layer = 0
script = ExtResource("2_lr2vt")
metadata/_edit_group_ = true

[node name="RadarColision" type="CollisionPolygon2D" parent="Radar"]
modulate = Color(0.760586, 0.188894, 0.168392, 1)
polygon = PackedVector2Array(22, 7.96398e-05, 279, -18.999, 320, 0.0011584, 278, 20.001)

[node name="Sprite2D" type="Sprite2D" parent="Radar"]
modulate = Color(1, 1, 1, 0.490196)
z_index = -1
position = Vector2(159.677, -1.90279e-05)
rotation = 1.5708
scale = Vector2(1.39014, 10.3414)
texture = ExtResource("5_irpux")

[node name="ShipBodyColision" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_tndx8")

[node name="ShipBody2" type="AnimatedSprite2D" parent="."]
rotation = -1.5708
scale = Vector2(0.3, 0.290625)
sprite_frames = SubResource("SpriteFrames_jklch")
animation = &"iddle"
frame_progress = 0.64123

[node name="DisabledRadar" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Radar" to="." method="_on_radar_body_entered"]
[connection signal="body_exited" from="Radar" to="." method="_on_radar_body_exited"]
[connection signal="timeout" from="DisabledRadar" to="." method="_on_disabled_radar_timeout"]
